@@ -1,3 +1,10 @@
+2007-02-26  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* src/baobab.c: (start_proc_on_dir):
+
+	BUGZILLA: #411867 - baobab crashed with SIGSEGV 
+	in pango_fc_font_lock_face()
+
 2007-02-08  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* data/baobab.glade: Add tooltip to refresh toolbar button.
